--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,18 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <div class="board"> 
-      <div id="" class="board__item"></div>
-      <div id="" class="board__item"></div>
+    <div class="board">
+      <div id="" class="board__item">
+        <div class="square">
+
+        </div>
+      </div>
+      <div id="" class="board__item">
+        <div class="circle">
+
+        </div>
+
+      </div>
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
