Added draw Square and draw Circle methods

--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,11 @@
     <div class="board">
       <div id="" class="board__item">
         <div class="square">
-
         </div>
       </div>
       <div id="" class="board__item">
         <div class="circle">
-
         </div>
-
       </div>
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
@@ -27,5 +24,6 @@
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
     </div>
+    <script type="text/javascript" src="js/bundle.js"></script>
   </body>
 </html>
