--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,13 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div class="information">
+      <p class="information__turn"></p>
+      <p class="information__mode"></p>
+    </div>
     <div class="board">
-      <div id="" class="board__item">
-        <div class="square">
-        </div>
-      </div>
-      <div id="" class="board__item">
-        <div class="circle">
-        </div>
-      </div>
+      <div id="" class="board__item"></div>
+      <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
