added game blocking module

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
       <p class="information__turn"></p>
       <p class="information__mode"></p>
     </div>
+    <div class="win-info">
+      <p class="win-info__text"><span id="win-info-figure">x</span> wins!</p>
+    </div>
     <div class="board">
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
