Added reset and win-info blocks

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
     </div>
+    <div class="reset" id="reset">New Game</div>
     <script type="text/javascript" src="js/bundle.js"></script>
   </body>
 </html>
