Added choosing between playing vs computer or player

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div id="game-start" class="game-start">
+      <p class="game-start__text">Do you want to play versus:</p>
+      <p class="game-start__options"><span id="human">Human?</span> or <span id="computer">Computer?</span></p>
+    </div>
     <div class="information">
       <p class="information__turn"></p>
       <p class="information__mode"></p>
