Added styles for game-start block

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="game-start" class="game-start">
       <p class="game-start__text">Do you want to play versus:</p>
-      <p class="game-start__options"><span id="human">Human?</span> or <span id="computer">Computer?</span></p>
+      <p class="game-start__options"><span id="human" class="game-start__options--human">Human?</span> or <span id="computer" class="game-start__options--computer">Computer?</span></p>
     </div>
     <div class="information">
       <p class="information__turn"></p>
