Stylised win info text

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
       <p class="information__turn"></p>
       <p class="information__mode"></p>
     </div>
-    <div class="win-info">
-      <p class="win-info__text"><span id="win-info-figure">x</span> wins!</p>
+    <div class="win-info" id="win-info">
+      <p class="win-info__text"><span class="win-info__text--colored" id="win-info-figure">Square</span> wins!</p>
     </div>
     <div class="board">
       <div id="" class="board__item"></div>
