Added draw block

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
     <div class="win-info" id="win-info">
       <p class="win-info__text"><span class="win-info__text--colored" id="win-info-figure">Square</span> wins!</p>
     </div>
+    <div class="draw-info" id="draw-info">
+      <p class="draw-info__text">It is a <span class="draw-info__text--colored">DRAW</span>!</p>
+    </div>
     <div class="board">
       <div id="" class="board__item"></div>
       <div id="" class="board__item"></div>
