--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div class="draw-info" id="draw-info">
       <p class="draw-info__text">It is a <span class="draw-info__text--colored">DRAW</span>!</p>
     </div>
-    <div class="points-info points-info--visible" id="points-info">
+    <div class="points-info" id="points-info">
       <p class="points-info__text"><span class="points-info__text--player1" id="points-player1">Player1: 0</span> <span class="points-info__text--player2" id="points-player2">Player2: 1</span></p>
     </div>
     <div class="board">
