Added styles for points-info

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <p class="draw-info__text">It is a <span class="draw-info__text--colored">DRAW</span>!</p>
     </div>
     <div class="points-info" id="points-info">
-      <p class="points-info__text"><span class="points-info__text--player1" id="points-player1">Player1: 0</span> <span class="points-info__text--player2" id="points-player2">Player2: 0</span></p>
+      <p class="points-info__text"><span class="points-info__text--player1">Player1: <span class="points-info__text--orange" id="points-player1">0</span></span>pts<br/><span class="points-info__text--player2">Player2: <span class="points-info__text--green" id="points-player2">0</span></span>pts</p>
     </div>
     <div class="board">
       <div id="" class="board__item"></div>
